--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "envelo",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://ann-kar.github.io/paczkomaty",
   "main": "index.js",
   "scripts": {
     "ts": "npx tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "typescript": "^4.5.5"
   }
 }
